<resources>
    <string name="app_name">UrChoice</string>

    <!--SIGN Y LOGIN SCREENS-->
    <string name="sign">SIGN IN</string>
    <string name="login">LOG IN</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="confirm">Confirm password</string>
    <string name="create">CREATE ACCOUNT</string>
    <string name="log">LOG &amp; GO TO LOBBY</string>


    <!--TAP TO START SCREEN-->
    <string name="app_title">UrChoice</string>
    <string name="tap">TAP SCREEN TO START</string>
    <string name="uc_studio">\@UrChoice STUDIO</string>
    <string name="uwu">\@2024 UwU Entertainment Inc.</string>
    <string name="animation">\@UrChoice, UwU Animation</string>
    <string name="slogan">Which will be your choice ?</string>


    <!--TOP INFO USER-->
    <string name="user_nick">Lukalergio</string>
    <string name="user_email">lukalergio@gmail.com</string>
    <string name="user_games">000</string>


    <!--FRAGMENTS-->
    <string name="create_fragment">NEW</string>
    <string name="friends_fragment">FRIENDS</string>
    <string name="saved_fragment">LIBRARY</string>
    <string name="profile_fragment">PROFILE</string>
    <string name="user_fragment">USER</string>
    <string name="find">Add friend by name</string>
    <string name="friends_requests">REQUESTS</string>
    <string name="edit">EDIT</string>

    <!--CREATE ALL ROOMS SCREEN-->
    <string name="priv">PRIVATE ROOM</string>
    <string name="category">CATEGORY</string>


    <!--CREATE CATEGORY SUB FRAGMENT-->
    <string name="insert_name">CATEGORY NAME</string>
    <string name="insert_image">CATEGORY IMAGE</string>
    <string name="insert_card">ADD CARD</string>
    <string name="card_data">CARD DATA</string>
    <string name="create_cat">CREATE</string>
    <string name="no_cards_yet_caps">U HAVEN\'T ADD ANY CARDS YET.\nWHAT U WAITING FOR?</string>
    <string name="no_cards_yet_minus">U haven\'t add any cards yet.\nWhat u waiting for?</string>


    <!--CREATE ROOM SUB FRAGMENT-->
    <string name="room_name">ROOM NAME</string>
    <string name="choose">CHOOSE CATEGORY</string>

    <!--CARDVIEWS-->
    <string name="cat_name">LA MAMÁ DE LUCA</string>
    <string name="cat_name2">Akame Ga Kill Esdeath</string>


    <!--FRIENDS SCREEN-->
    <string name="lukinda">Lukinda551</string>
    <string name="lukinda_mail">/@LUKINDA551</string>
    <string name="requests">Requests ></string>
    <string name="back_friends">BACK TO FRIENDS</string>

    <!--X SCREEN-->


    <!--RANKING SCREEN-->
    <string name="ranking">RANKING</string>
    <string name="start">START GAME</string>
    <string name="hisoka">Hisoka Morow</string>
    <string name="hisoka_100">100</string>
    <string name="feitan">Feitan Portor</string>
    <string name="feitan_90">90</string>
    <string name="kite">Kite</string>
    <string name="kite_74">74</string>
    <string name="illumi">Illumi Zoldyck</string>
    <string name="illumi_61">61</string>
    <string name="shizuku">Shizuku Murasaki</string>
    <string name="shizuku_23">23</string>

    <!-- CREATE ROOM  -->
    <string name="room">ROOM</string>

    <!--OTHERS-->
    <string name="loading">Loading...</string>
    <string name="pin">PIN</string>
    <string name="enter_pin">ENTER PIN</string>
    <string name="card_name">CARD NAME</string>
    <string name="go_home">GO TO HOME</string>
    <string name="success">Ur category has been created!!</string>
    <string name="x_players">X PLAYERS</string>
    <string name="start_now">START</string>
    <string name="exit">EXIT</string>
    <string name="my_games">MY GAMES</string>
    <string name="played">PLAYED\nGAMES</string>
    <string name="sure">ARE U SURE?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="close">CLOSE</string>


    <!--Cancel edit alert-->
    <string name="discard">Discard changes?</string>
    <string name="back_profile">GO TO\nPROFILE</string>
    <string name="keep_editing">KEEP\nEDITING</string>
    <string name="update_successful">Ur category has been updated!</string>
    <string name="next_round">NEXT ROUND IN...</string>
    <string name="type">TYPE A CATEGORY</string>
    <string name="looking">I\'M LOOKING FOR...</string>


    <string name="new_category_succesfully">LA CATEGORIA SE HA PODIDO GENERAR CORRECTAMENTE REGRESE A HOME</string>
    <string name="loading_title">WAITING FOR SERVER</string>
    <string name="loading_message">WAIT</string>

</resources>