<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/alert_dialog" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="225dp"
            android:text="@string/sure"
            style="@style/AlertDialogTest" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yes_delete"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:background="#00FFFFFF"
            android:layout_marginStart="30dp"
            android:layout_alignParentStart="true"
            android:text="@string/yes"
            style="@style/profile_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/no_delete"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="30dp"
            android:background="#00FFFFFF"
            android:text="@string/no"
            style="@style/profile_text" />

    </RelativeLayout>
</RelativeLayout>