<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <ImageView
        android:id="@+id/waiting_playes_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/start_game_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/x_players"
        style="@style/AlertDialogTest" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_players"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="238dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alert_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:layout_marginStart="40dp"
        android:layout_alignParentStart="true"
        android:background="#00FFFFFF"
        android:text="@string/start_now"
        style="@style/profile_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alert_exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="40dp"
        android:background="#00FFFFFF"
        android:text="@string/exit"
        style="@style/profile_text" />

</RelativeLayout>