<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    android:id="@+id/owo"
    tools:context=".Fragments.EditCategoriesSubFragment" >

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/h232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blue" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/h233"
        app:layout_constraintBottom_toTopOf="@id/h234"
        app:layout_constraintStart_toEndOf="@id/v160"
        app:layout_constraintEnd_toStartOf="@id/v161"
        android:background="@drawable/user_info_container" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/h235"
        app:layout_constraintBottom_toTopOf="@id/h236"
        app:layout_constraintStart_toEndOf="@id/v162"
        app:layout_constraintEnd_toStartOf="@id/v163"
        android:text="@string/edit"
        style="@style/FragmentName" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/h237"
        app:layout_constraintBottom_toTopOf="@id/h238"
        app:layout_constraintStart_toEndOf="@id/v164"
        app:layout_constraintEnd_toStartOf="@id/v165"
        android:background="@drawable/create_category_background" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_cat_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/h239"
        app:layout_constraintBottom_toTopOf="@id/h240"
        app:layout_constraintStart_toEndOf="@id/v166"
        app:layout_constraintEnd_toStartOf="@id/v167"
        app:boxCornerRadiusTopStart="0dp"
        app:boxCornerRadiusTopEnd="0dp"
        app:boxCornerRadiusBottomStart="0dp"
        app:boxCornerRadiusBottomEnd="0dp"
        style="@style/CreateCategoryInputStyle" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_cat_name_insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_name"
            android:inputType="text"
            android:textColor="@color/red"
            android:fontFamily="@font/orbimedium"
            android:textColorHint="@color/red"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Mirar si se puede poner el scaletype con java-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_new_category_image_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/h241"
        app:layout_constraintBottom_toTopOf="@id/h242"
        app:layout_constraintStart_toEndOf="@id/v166"
        app:layout_constraintEnd_toStartOf="@id/v167"
        app:backgroundTint="@null"
        android:background="@drawable/red_border2"
        android:text="@string/insert_image"
        android:fontFamily="@font/orbimedium"
        android:textColor="@color/red"
        android:textAlignment="textStart"
        android:textSize="18sp"
        style="@style/CategoryAddFieldsButtons" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_new_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/h243"
        app:layout_constraintBottom_toBottomOf="@id/h244"
        app:layout_constraintStart_toEndOf="@id/v166"
        app:layout_constraintEnd_toStartOf="@id/v167"
        android:text="@string/insert_card"
        app:icon="@drawable/add_icon"
        app:iconTint="@color/red"
        app:iconGravity="end"
        style="@style/CategoryAddFieldsButtons" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/h245"
        app:layout_constraintBottom_toTopOf="@id/h246"
        app:layout_constraintStart_toEndOf="@id/v166"
        app:layout_constraintEnd_toStartOf="@id/v167"
        android:background="@drawable/red_border2" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/h247"
        app:layout_constraintBottom_toTopOf="@id/h248"
        app:layout_constraintStart_toEndOf="@id/v168"
        app:layout_constraintEnd_toStartOf="@id/v169"
        android:text="@string/card_data"
        style="@style/CreateCategoryText" />

    <TextView
        android:id="@+id/empty_card_views_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/h249"
        app:layout_constraintBottom_toTopOf="@id/h250"
        app:layout_constraintStart_toEndOf="@id/v168"
        app:layout_constraintEnd_toStartOf="@id/v169"
        android:text="@string/no_cards_yet_minus"
        android:visibility="invisible"
        style="@style/CreateEditCategoryRecyclerText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/edit_recycler_card_category"
        android:layout_width="0dp"
        android:layout_height="125dp"
        app:layout_constraintTop_toBottomOf="@id/h249"
        app:layout_constraintBottom_toTopOf="@id/h250"
        app:layout_constraintStart_toEndOf="@id/v168"
        app:layout_constraintEnd_toStartOf="@id/v169"
        android:orientation="horizontal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_new_category_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/h251"
        app:layout_constraintBottom_toTopOf="@id/h252"
        app:layout_constraintStart_toEndOf="@id/v170"
        app:layout_constraintEnd_toStartOf="@id/v171"
        android:text="@string/save"
        style="@style/CategoryButtonsRed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_edit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/h251"
        app:layout_constraintBottom_toTopOf="@id/h252"
        app:layout_constraintStart_toEndOf="@id/v172"
        app:layout_constraintEnd_toStartOf="@id/v173"
        android:text="@string/cancel"
        style="@style/CategoryButtonsWhite" />


    <!--Constraints verticales-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v160"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v161"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v162"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v163"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v164"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v165"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v166"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v167"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v168"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v169"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.81" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v170"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v171"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v172"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.49" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v173"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.89" />


    <!--Constraints horizontales-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h232"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h233"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h234"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h235"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h236"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h237"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h238"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h239"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h240"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.312" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h241"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.332" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h242"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h243"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.516" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h244"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.581" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h245"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.596" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h246"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h247"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h248"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.635" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h249"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h250"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h251"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.845" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h252"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.91" />

</androidx.constraintlayout.widget.ConstraintLayout>